--- a/app/index.html
+++ b/app/index.html
@@ -74,10 +74,83 @@
 
   <main class="main">
 
+    
   </main>
 
   <footer class="footer">
+    <div class="container">
+      <div class="footer__row">
+        <div class="footer__contacts">
+          <div class="footer__logo logo">
+            <a class="logo__link" href="#">
+              <img class="logo__img" src="images/logo.svg" alt="logo">Glee.
+            </a>
+          </div>
+          <a class="footer__address" href="#">Address:<span>4772 Wines Lane Houston, TX 77032</span></a>
+          <a class="footer__phone" href="tel:+8323475843">Telephone:<span>+832-347-5843</span> </a>
+          <a class="footer__email" href="mailto:contact@Glee.com">Email:<span>contact@Glee.com</span> </a>
+        </div>
 
+        <div class="footer__inner">
+          <p class="footer__title">Services</p>
+          <ul class="footer__list">
+            <li class="footer__items">
+              <a class="footer__link" href="#">About us</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Return Policy</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Our Blog</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Contact Us</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Terms & Condition</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__inner">
+          <p class="footer__title">Account</p>
+          <ul class="footer__list">
+            <li class="footer__items">
+              <a class="footer__link" href="#">Your Account</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Checkout</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Login</a>
+            </li>
+            <li class="footer__items">
+              <a class="footer__link" href="#">Register</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__form">
+          <p class="footer__title">Newsletter</p>
+          <p class="footer__text">
+            Subscribe by our newsletter and get update protidin.
+          </p>
+          <form class="footer__form" action="#">
+            <input class="footer__input" type="email" class="footer__input" placeholder="Email address">
+            <button class="footer__btn" type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copy">©2020 CopyRight Example. All rights reserved. </p>
+        <div class="footer__nav">
+          <a class="footer__nav-link" href="#">Home</a>
+          <a class="footer__nav-link" href="#">About</a>
+          <a class="footer__nav-link" href="#">Blog</a>
+          <a class="footer__nav-link" href="#">Contact</a>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="js/main.min.js"></script>
